--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "todolist",
   "version": "0.1.0",
   "private": true,
-  "main": "server.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -11,14 +10,24 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "dependencies": {
+    "@babel/helper-create-class-features-plugin": "^7.16.0",
+    "@babel/plugin-bugfix-v8-spread-parameters-in-optional-chaining": "^7.16.0",
+    "@babel/plugin-syntax-typescript": "^7.16.0",
+    "@mui/icons-material": "^5.0.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "dotenv": "^10.0.0",
+    "morgan": "^1.10.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "tsutils": "^3.21.0",
     "web-vitals": "^1.0.1"
   },
   "eslintConfig": {
